Fix edges on main page
I want to ensure that all people can read comfortably, avoiding edges that are too close to the text and other elements.

--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,12 @@ body {
 }
 
 #wrapper {
-    background-color: blanchedalmond
+    background-color: blanchedalmond;
+    padding-left: 10%;
+    padding-bottom: 10%;
+    padding-right: 10%;
+    max-width: 1200px;
+    margin: auto;
 }
 
 socialmedias {
